2010-03-26  Aldy Hernandez  <aldyh@redhat.com>

	* configure.ac: Remove Linux futex support.
	* configure.tgt (config_path): Same.
	* Makefile.am: Same.
	* config/linux: Remove entire directory.
	* configure: Rebuild.
	* Makefile.in: Rebuild.
	* testsuite/Makefile.in: Rebuild.

2010-03-09  Aldy Hernandez  <aldyh@redhat.com>

	* retry.cc (decide_retry_strategy): Set state to STATE_SERIAL when
	switching to serial mode.
	* beginend.cc (trycommit_and_finalize): Unlock serial_lock.

2010-03-03  Aldy Hernandez  <aldyh@redhat.com>

	* configure.tgt: Add emacs -*- tags.
	* barrier.tpl: Same.

2010-02-23  Aldy Hernandez  <aldyh@redhat.com>

	* Makefile.am: Rename serial.cc to method-serial.cc.
	* Makefile.in: Regenerate with automake 1.11.1.
	* testsuite/Makefile.in: Same.
	* aclocal.m4: Regenerate with aclocal 1.11.1.
	* method-serial.cc: Rename from serial.cc.
	* libitm_i.h (struct gtm_transaction): Update comment on
	serialirr_mode.

2010-02-22  Aldy Hernandez  <aldyh@redhat.com>

	* libitm_i.h (GTM_longjmp): Add ITM_REGPARM.
	* config/linux/rwlock.h (class gtm_rwlock): Add comments.

2010-02-11  Aldy Hernandez  <aldyh@redhat.com>

	* configure: Rebuild.

2009-11-12  Richard Henderson  <rth@redhat.com>

	* Rewrite everything in C++.

2009-11-03  Richard Henderson  <rth@redhat.com>

	* config/x86/x86_sse.c, config/x86/x86_avx.c: New files.
	* Makefile.am (libitm_la_SOURCES): Add them.
	* configure.ac (ARCH_X86): New conditional.
	* Makefile.in, configure: Rebuild.
	* configure.tgt: Set up ARCH; do cflags setup at the same time.
	Move futex setup into "other system configury" case.
	* local.c (rollback_local): Merge into ...
	(GTM_rollback_local): ... here.
	(GTM_LB): Rename from GTM_alloc_local; do the memcpy here.
	(_ITM_LB): Define as an alias to GTM_LB.

2009-11-03  Richard Henderson  <rth@redhat.com>

	* method-readonly.c: New file.
	* Makefile.am (libitm_la_SOURCES): Add it.
	* Makefile.in: Rebuild.
	* beginend.c (gtm_stmlock_array, gtm_clock): New.